@@ -51,7 +51,7 @@ case $COMMAND in
     echo ""
     #try to locate hdfs and if present, delegate to it.  
     if [ -f "${HADOOP_HDFS_HOME}"/bin/hdfs ]; then
-      "${HADOOP_HDFS_HOME}"/bin/hdfs $*  
+      exec "${HADOOP_HDFS_HOME}"/bin/hdfs $*  
     else
       echo "HDFS not found."
       exit
@@ -65,7 +65,7 @@ case $COMMAND in
     echo ""
     #try to locate mapred and if present, delegate to it.
     if [ -f "${HADOOP_MAPRED_HOME}"/bin/mapred ]; then
-      "${HADOOP_MAPRED_HOME}"/bin/mapred $*  
+      exec "${HADOOP_MAPRED_HOME}"/bin/mapred $*  
     else
       echo "MAPRED not found."
       exit
