@@ -274,6 +274,9 @@ Trunk (unreleased changes)
 
     HADOOP-5347. Create a job output directory for the bbp examples.  (szetszwo)
 
+    HADOOP-5341. Make hadoop-daemon scripts backwards compatible with the
+    changes in HADOOP-4868. (Sharad Agarwal via yhemanth)
+
 Release 0.20.0 - Unreleased
 
   INCOMPATIBLE CHANGES
